# django-websocketclient

./: LICENSE  README.md  pyproject.toml  runtests.py  setup.cfg
websocketclient/: client.py  config.py  handlers.py
websocketclient/management/commands/: runwebsocketclient.py
websocketclient/tests/: test_websocketclient.py
